--- a/examples/2D/platform/.godot/editor/editor_layout.cfg
+++ b/examples/2D/platform/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/platform.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/platform.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/sprites/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/platform.tscn")
 current_scene="res://scenes/main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -48,11 +48,11 @@ selected_script="res://scripts/player.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.0714285
 
 [GameView]
 
-floating_window_rect=Rect2i(594, 275, 732, 527)
+floating_window_rect=Rect2i(0, 69, 1920, 1011)
 floating_window_screen=0
 
 [ShaderEditor]
